<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="instructions">Welcome to Tic Tac Toe! There are two players.
                                Player 1 is represented by a blue fish and Player
                                2 is represented by a yellow fish. The first player
                                to get 3 fish in a row vertically, horizontally, or
                                diagonally wins.</string>
    <string name="player1Label">Player 1 name:</string>
    <string name="player2Label">Player 2 name:</string>
    <string name="player1Hint">Player 1 enter your name</string>
    <string name="player2Hint">Player 2 enter your name</string>
    <string name="playPrompt">Play!</string>
    <string name="playAgainPrompt">Play Again</string>
    <string name="quitPrompt">Quit</string>
</resources>
